--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.2.1",
-    "pg": "^8.17.2"
+    "nodemailer": "^8.0.1",
+    "pg": "^8.18.0"
   }
 }
